# mup-equinox

./: README.md  pyproject.toml  raw_results.csv  scaling_summary.csv
examples/: mlp.py  mlp_base.yaml
examples/cnn/: cnn.py  coord_check.py
examples/cnn/results/: activation_deltas.csv  activation_norms.csv
examples/cnn/results/_adam/: activation_deltas.csv  activation_norms.csv
examples/cnn/results/_sgd/: activation_deltas.csv  activation_norms.csv
examples/cnn/results/sgd_step_1/: activation_deltas.csv  activation_norms.csv
examples/mlp/: coord_check.py  mlp.py
examples/mlp/results/_adam/: activation_deltas.csv  activation_norms.csv
examples/mlp/results/_sgd/: activation_deltas.csv  activation_norms.csv
examples/mlp/results/adam/: activation_deltas.csv  activation_norms.csv
examples/mlp/results/sgd/: activation_deltas.csv  activation_norms.csv
examples/ssm/: compute_scaling_factor.py  coord_check.py  find_ssm_scale.ipynb  nbit_memory_task.py  s5.py  ssm.py  white_noise_task.py
examples/ssm/results/_adam/: activation_deltas.csv  activation_norms.csv
examples/ssm/results/_sgd/: activation_deltas.csv  activation_norms.csv
examples/ssm/results/adam/: activation_deltas.csv  activation_norms.csv
results/coord_check/: activation_deltas.csv  activation_norms.csv
results/coord_check/mlp/: activation_deltas.csv  activation_norms.csv
results/coord_check/s5/: activation_deltas.csv  activation_norms.csv
results/empirical_scaling_laws/: parameter_dependencies.csv  raw_results.csv  scaling_summary.csv
slurm/logs/: coord_check_1583203.err  coord_check_1583203.out  coord_check_1635553.err  coord_check_1635553.out
src/mup_equinox/: __init__.py  config.py  coord_check.py  metadata.py  scalers.py  utils.py
tests/: __main__.py  mlp_coord_check.py  s5_coord_check.py
(+12 files in other folders)
