[project]
name = "mup-equinox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Melina-Jingting", email = "melinajingting@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "equinox>=0.11.10",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
